--- a/schedule.html
+++ b/schedule.html
@@ -14,7 +14,7 @@
 
         <script src="assets/js/vendor/jQuery.js"></script>
         <script src="assets/js/vendor/bootstrap.js"></script>
-        <script src="assets/js/script.js"></script>
+        <script src="./dist/script.min.js"></script>
     </head>
 
     <body class="schedule-bg">
