--- a/schedule.html
+++ b/schedule.html
@@ -12,9 +12,7 @@
         />
         <link rel="stylesheet" href="assets/css/style.css" />
 
-        <script src="assets/js/vendor/jQuery.js"></script>
-        <script src="assets/js/vendor/bootstrap.js"></script>
-        <script src="./dist/script.min.js"></script>
+        <script src="./dist/main.bundle.js" defer></script>
     </head>
 
     <body class="schedule-bg">
